# Trading-Bot

./: .env.example  .gitignore  pyproject.toml
config/: default.yaml
src/: main.py
src/backtest/: backtester.py  data_fetcher.py  report.py
src/core/: grid_engine.py  order_manager.py  position_tracker.py  risk_manager.py
src/dashboard/: app.py  state.py  ws.py
src/dashboard/routes/: controls.py  pnl.py  status.py  trades.py
src/dashboard/static/: app.js  index.html  style.css
src/exchange/: base.py  paper.py
src/storage/: database.py  models.py
src/strategy/: grid_strategy.py  multi_pair_manager.py
src/utils/: config.py  helpers.py  logger.py
tests/: test_backtester.py  test_grid_engine.py  test_risk_manager.py
